starlark-rust/starlark_syntax/src/syntax/def_tests/positional_only_in_standard_dialect_lambda.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
lambda /, x: 17

Error: error: / positional-only-arguments is not allowed in this dialect
 --> test.star:1:8
  |
1 | lambda /, x: 17
  |        ^
  |
